Make questions toolbar 100% width so all buttons fit on iPhone. Fix issue with questions toolbar container not taking taking up enough space and not scrolling smoothly.

--- a/app/less/common.less
+++ b/app/less/common.less
@@ -228,6 +228,9 @@ div[crs-block] {
 }
 
 /* Full Size Well */
+.full {
+  width: 100%;
+}
 .well-full {
   border-radius: 0;
   border-left: 0;
