--- a/app/less/event-admin.less
+++ b/app/less/event-admin.less
@@ -175,9 +175,6 @@ main.event-overview {
   }
 }
 main.event-registrations {
-  .full {
-    width: 100%;
-  }
   .rowdetails .well {
     background: @verylightgray;
     border-radius: 0;
@@ -222,7 +219,11 @@ main.event-details {
   }
 }
 main.event-questions {
+  .questions-toolbar-container{
+    margin-bottom: 10px;
+  }
   .questions-toolbar{
+    margin-bottom: 0;
     .label{
       display: inline-block;
       margin: 4px 2px 1px;
@@ -232,9 +233,12 @@ main.event-questions {
   }
   .questions-toolbar.affix{
     position: fixed;
-    width: 100%;
+    //width: 100%;
     top: 0;
     left: 0;
+    right: 0;
+    margin-left: 0;
+    margin-right: 0;
     z-index: 5;
     border-left: 0;
     border-right: 0;
